--- a/OkkaKalipWeb.UI/OkkaKalipWeb.UI.csproj
+++ b/OkkaKalipWeb.UI/OkkaKalipWeb.UI.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <ProjectReference Include="..\OkkaKalipWeb.Business\OkkaKalipWeb.Business.csproj" />
+    <ProjectReference Include="..\OkkaKalipWeb.DataAccess\OkkaKalipWeb.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
