Product pagination and product filtering operations by category

--- a/OkkaKalipWeb.DataAccess/OkkaKalipWeb.DataAccess.csproj
+++ b/OkkaKalipWeb.DataAccess/OkkaKalipWeb.DataAccess.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\OkkaKalipWeb.Entities\OkkaKalipWeb.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concrete\Memory\" />
+  </ItemGroup>
+
 </Project>
