Product Cart and Account Redesign

--- a/OkkaKalipWeb.UI/appsettings.json
+++ b/OkkaKalipWeb.UI/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnection": "Server=(localdb)\\v11.0;Database=NakisKalipDb;Integrated Security=true;"
+  },
+  "Data": {
+    "AdminUser": {
+      "username": "admin",
+      "password": "Adminuser_123",
+      "email": "adminuser@shopapp.com",
+      "role": "admin"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
