--- a/OkkaKalipWeb.UI/package.json
+++ b/OkkaKalipWeb.UI/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "ckeditor4": "4.14.0",
     "jquery": "3.4.1",
-    "bootstrap": "4.4.1"
+    "bootstrap": "4.4.1",
+    "jquery-validation": "1.19.1",
+    "jquery-validation-unobtrusive": "3.2.11"
   }
 }
