--- a/OkkaKalipWeb.UI/package.json
+++ b/OkkaKalipWeb.UI/package.json
@@ -9,6 +9,7 @@
     "jquery": "3.4.1",
     "bootstrap": "4.4.1",
     "jquery-validation": "1.19.1",
-    "jquery-validation-unobtrusive": "3.2.11"
+    "jquery-validation-unobtrusive": "3.2.11",
+    "toastr": "2.1.4"
   }
 }
