--- a/OkkaKalipWeb.UI/OkkaKalipWeb.UI.csproj
+++ b/OkkaKalipWeb.UI/OkkaKalipWeb.UI.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\OkkaKalipWeb.DataAccess\OkkaKalipWeb.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\info\" />
+  </ItemGroup>
+
 </Project>
