--- a/OkkaKalipWeb.UI/OkkaKalipWeb.UI.csproj
+++ b/OkkaKalipWeb.UI/OkkaKalipWeb.UI.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\img\info\" />
+    <Folder Include="wwwroot\img\product\" />
     <Folder Include="wwwroot\img\news\" />
   </ItemGroup>
 
