Info Entity Updated

--- a/OkkaKalipWeb.UI/appsettings.json
+++ b/OkkaKalipWeb.UI/appsettings.json
@@ -6,7 +6,7 @@
     "AdminUser": {
       "username": "admin",
       "password": "Adminuser_123",
-      "email": "adminuser@shopapp.com",
+      "email": "adminuser@nakiskalip.com",
       "role": "admin"
     }
   },
